# test-zenroom-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
keys/: device_keys.json
scripts/: test.lua
src/: CMakeLists.txt  main.cpp
